; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_refs.c_alloc_ref.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_refs.c_alloc_ref.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.TYPE_4__* (i8*)* @alloc_ref to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.TYPE_4__* @alloc_ref(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store i8* %0, i8** %2, align 8
  store %struct.TYPE_4__* null, %struct.TYPE_4__** %3, align 8
  %6 = load i8*, i8** %2, align 8
  %7 = call i64 @strlen(i8* %6)
  store i64 %7, i64* %4, align 8
  %8 = load i64, i64* %4, align 8
  %9 = trunc i64 %8 to i32
  %10 = call i32 @GIT_ADD_SIZET_OVERFLOW(i64* %5, i64 4, i32 %9)
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %28, label %12

12:                                               ; preds = %1
  %13 = load i64, i64* %5, align 8
  %14 = call i32 @GIT_ADD_SIZET_OVERFLOW(i64* %5, i64 %13, i32 1)
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %28, label %16

16:                                               ; preds = %12
  %17 = load i64, i64* %5, align 8
  %18 = call %struct.TYPE_4__* @git__calloc(i32 1, i64 %17)
  store %struct.TYPE_4__* %18, %struct.TYPE_4__** %3, align 8
  %19 = icmp ne %struct.TYPE_4__* %18, null
  br i1 %19, label %20, label %28

20:                                               ; preds = %16
  %21 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %22 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = load i8*, i8** %2, align 8
  %25 = load i64, i64* %4, align 8
  %26 = add i64 %25, 1
  %27 = call i32 @memcpy(i32 %23, i8* %24, i64 %26)
  br label %28

28:                                               ; preds = %20, %16, %12, %1
  %29 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  ret %struct.TYPE_4__* %29
}

declare dso_local i64 @strlen(i8*) #1

declare dso_local i32 @GIT_ADD_SIZET_OVERFLOW(i64*, i64, i32) #1

declare dso_local %struct.TYPE_4__* @git__calloc(i32, i64) #1

declare dso_local i32 @memcpy(i32, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
